# Fluently

./: README.md  implementation_plan.md  index.html  package-lock.json  package.json  projectrules.md
src/: App.css  App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/pages/: Settings.tsx
src/prompts/: rewrite.ts
src/services/: detector.ts  diffEngine.ts  groq.ts  preprocessor.ts  privacyFilter.ts  sanitizer.ts
