[package]
name = "typemind"
version = "0.1.0"
description = "TypeMind — Think in Bangla, Write in Natural English"
authors = ["you"]
edition = "2021"

[lib]
name = "typemind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.1.2"
